api call integrations and ui changes

--- a/where_next/src/App.css
+++ b/where_next/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.blog__image {
+  width: 100%;
+  height: 10rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.user__image {
+  width:  17px;
+  height: 17px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+.user__name {
+  font-size: 17px !important;
+  font-weight: 600;
+  margin-left: 1rem;
+}
