--- a/where_next/src/Components/Tours/Tours.css
+++ b/where_next/src/Components/Tours/Tours.css
@@ -286,7 +286,11 @@ main {
   cursor: pointer;
   padding-left: 0.25rem;
 }
-
+.single-tour a {
+  color: #49a6e9;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
 .tour-price {
   color: var(--clr-primary-5);
   background: var(--clr-primary-10);
